# resume-builder

./: .gitignore  CLAUDE.md  PLAN.md  README.md
backend/: .env.example  .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt  requirements.txt.bak  vercel.json
backend/api/v1/: resume_routes.py
backend/core/: config.py
backend/models/: __init__.py  job_description.py  resume.py
backend/services/: __init__.py  ats_formatter_service.py  job_description_analyzer_service.py  resume_generator_service.py  resume_parser_service.py  resume_tailor_service.py
backend/utils/: llm.py
docs/superpowers/plans/: 2026-06-25-resume-tailor-implementation-plan.md  2026-06-27-job-description-analyzer-service-plan.md
docs/superpowers/specs/: 2026-06-25-phase-1-setup-design.md  2026-06-25-resume-tailor-design.md  2026-06-27-job-description-analyzer-design.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DownloadButtons.tsx  GenerateButton.tsx  JobDescriptionInput.tsx  ProcessingStatus.tsx  ResumeUpload.tsx  UnifiedResultCard.tsx
frontend/lib/: api.ts  hooks.ts
frontend/src/app/: layout.tsx
