[project]
name = "resumetailor-backend"
version = "1.0.0"
description = "ResumeTailor FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "python-docx==1.1.0",
    "PyMuPDF==1.24.0",
    "pydantic==2.7.4",
    "python-dotenv==1.0.0",
    "reportlab==4.0.0",
    "pydantic-settings==2.4.0",
    "groq==0.37.1",
    "huggingface-hub==0.20.0",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-groq==0.3.0",
    "langchain-text-splitters==0.3.0",
    "python-dateutil==2.9.0.post0",
    "httpx==0.27.2",
]

[tool.uv]
# Override rlPyCairo and pycairo (transitive deps of reportlab) to prevent
# them from being installed — pycairo requires system Cairo C libs that
# aren't available on Vercel's serverless build environment.
# ReportLab works fine without Cairo for PDF generation.
override-dependencies = [
    "rlPyCairo; sys_platform == 'never'",
    "pycairo; sys_platform == 'never'",
]
